--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets//vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/icons-blog.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Solid</title>
+    <title>Jerry's Blog</title>
   </head>
   <body>
     <div id="root"></div>
