--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self'; object-src 'none'; base-uri 'self';"
+    />
     <title>Jerry's Blog</title>
   </head>
   <body>
